GUI fixed bugs, not "F", "B" functions